<resources>
    <string name="app_name">Hackathon App</string>
    <string name="add_user_text">Добавить игрока</string>
    <string name="start_button_text">Начать</string>
    <string name="enter_name_username_text">Введите имя игрока</string>
    <string name="description_fant">Описание задания:</string>
    <string name="complete_fant_text">Выполнено</string>
    <string name="end_fant">Закончить</string>
    <string name="text_fant">Поздравлять каждого прохожего с праздником, желая всего наилучшего</string>
    <string name="drop_text">Пропустить</string>
    <string name="Start_game">Начать игру</string>
    <string name="Rules">Правила</string>
    <string name="settings_text">Settings</string>
    <string name="back_button_text">Назад</string>

    <string name="rules_main_text">Во время игры вам необходимо будет выполнять задания, которые помогут лучше узнать тех, с кем вы играете, испытать свою смекалку, сноровку и раскрепощенность, укрепить отношения и просто весело провести время. Игра идеально подойдет для семейных посиделок, детских праздников или для вечеринки! В настройках игры можно выбрать количество участников и понравившиеся темы для фантов. При выполнении фант-карточки сделайте "свайп вверх",при пропуске "свайп вниз". По окончании игры будет показана статистика игоков.</string>
    <string name="toast_text_small_users">Недостаточно игроков для игры</string>
    <string name="toast_text_small">Недостаточно игроков для игры или фантов</string>
    <string name="enter_username_toast_text">Введите имя игрока</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_title">Отжаться на руках 20 раз</string>
    <string name="check_box_title">Выполнять</string>
    <string name="to_game_button_title">Играть</string>
    <string name="end_game_main_text">Игра завершена</string>
    <string name="restart_game_text">Заново</string>
    <string name="end_game_text">Закончить</string>

    <string name="small_fants_toast_text">У вас не хватвет фантов</string>

</resources>