<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
            android:imeOptions="actionDone"
            android:hint="@string/enter_name_username_text"
            android:layout_margin="16dp"
            android:id="@+id/enter_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_user"
            android:layout_width="0dp"
            android:layout_height="50dp" />

    <Button
            android:layout_marginEnd="10dp"
            android:text="@string/add_user_text"
            android:layout_marginTop="16dp"
            android:id="@+id/add_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_user_recycler_view"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/enter_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    <Button
            android:id="@+id/next_fragment_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="30dp" />

    <Button
            android:layout_margin="30dp"
            android:text="@string/back_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/back_main_fragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>