<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

    <TextView
            android:layout_margin="20dp"
            android:text="Круг 1"
            android:textSize="30sp"
            android:textColor="#FFC107"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/round_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_count"
            app:layout_constraintBottom_toTopOf="@id/drop_fant_button"
            app:cardElevation="24dp"
            app:cardMaxElevation="36dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/username_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Дима"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/main_image_game"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username_game"
                    tools:src="@drawable/party" />

            <TextView
                    android:id="@+id/description_fant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="#FFC107"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_image_game"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:text="@string/description_fant" />

            <TextView
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="#4CAF50"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    tools:text="@string/text_fant"
                    android:id="@+id/game_fants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/description_fant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:text="@string/complete_fant_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/drop_fant_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/complete_fant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <Button
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:text="@string/drop_text"
            app:layout_constraintStart_toEndOf="@id/complete_fant_button"
            app:layout_constraintEnd_toStartOf="@id/end_fant"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/drop_fant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    <Button
            app:layout_constraintStart_toEndOf="@id/drop_fant_button"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/end_fant"
            android:id="@+id/end_fant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>